--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header id="header" class="px-6 flex z-11 py-2 bg-transparent fixed w-full transition-colors duration-700 backdrop-blur-md">
     <div class="flex-1 flex justify-between items-center">
       <a href="index.html">
-        <img class="w-[2rem] z-10" src="/img/Logo_w.png" alt="Logo"/>
+        <img class="w-[2rem] z-10" src="./img/Logo_w.png" alt="Logo"/>
       </a>
     </div>
     <div class="flex items-center z-20" id="menu">
@@ -26,7 +26,7 @@
             <a id="projects-link" class="rounded-full py-1 px-4 block border-2 border-transparent  font-semibold transition-colors duration-300 ease-in-out  " href="#nextSection">Projects</a>
           </li>
           <li>
-            <a class="py-1 px-4 block font-semibold rounded-full border-2 border-transparent hover:border-white/90 hover:text-white transition-colors duration-300 ease-in-out" href="resume.html">Resume</a>
+            <a class="py-1 px-4 block font-semibold rounded-full border-2 border-transparent hover:border-white/90 hover:text-white transition-colors duration-300 ease-in-out" href="/src/resume.html">Resume</a>
           </li>
         </ul>
       </nav>
