--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="relative overflow-hidden">
               <img 
                 class="rounded-t-lg w-full transform transition-transform duration-1800 group-hover:scale-110" 
-                src="\img\silvair\Silvair_thumb.png" 
+                src="/img/silvair/Silvair_thumb.png" 
                 alt="" 
               />
               <div 
