--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div id="hero" class="relative w-full h-screen overflow-hidden group">
     <!-- Background Image -->
     <div class="absolute inset-0 bg-cover bg-center transition-transform duration-3000 group-checked:scale-110" 
-      style="background-image: url('/img/BG.png');">
+      style="background-image: url('img/BG.png');">
     </div>
     <!-- Color Overlay -->
     <div class="absolute inset-0 backdrop-blur-sm bg-black/90 group-hover:backdrop-blur-none transition-all duration-2000 ease-in-out">
@@ -88,7 +88,7 @@
             <div class="relative overflow-hidden">
               <img 
                 class="rounded-t-lg w-full transform transition-transform duration-1800 group-hover:scale-110" 
-                src="\img\iLumio\ilumio_thumb.png" 
+                src="img/iLumio/ilumio_thumb.png" 
                 alt="" 
               />
               <div 
@@ -114,7 +114,7 @@
             <div class="relative overflow-hidden">
               <img 
                 class="rounded-t-lg w-full transform transition-transform duration-1800 group-hover:scale-110" 
-                src="\img\Motorola\Motorola_thumb.png" 
+                src="img/Motorola/Motorola_thumb.png" 
                 alt="" 
               />
               <div 
@@ -140,7 +140,7 @@
             <div class="relative overflow-hidden">
               <img 
                 class="rounded-t-lg w-full transform transition-transform duration-1800 group-hover:scale-110" 
-                src="\img\Incampagna\incampagna_thumb.png" 
+                src="img/Incampagna/incampagna_thumb.png" 
                 alt="" 
               />
               <div 
@@ -166,7 +166,7 @@
             <div class="relative overflow-hidden">
               <img 
                 class="rounded-t-lg w-full transform transition-transform duration-1800 group-hover:scale-110" 
-                src="\img\Klif\klif_thumb.png" 
+                src="img/Klif/klif_thumb.png" 
                 alt="" 
               />
               <div 
@@ -193,7 +193,7 @@
             <div class="relative overflow-hidden">
               <img 
                 class="rounded-t-lg w-full transform transition-transform duration-1800 group-hover:scale-110" 
-                src="\img\esky\esky_thumb.png" 
+                src="img/esky/eSky_thumb.png" 
                 alt="" 
               />
               <div 
@@ -219,7 +219,7 @@
             <div class="relative overflow-hidden">
               <img 
                 class="rounded-t-lg w-full transform transition-transform duration-1800 group-hover:scale-110" 
-                src="\img\Mckinsey\mckinsey_thumb.png" 
+                src="img/Mckinsey/mckinsey_thumb.png" 
                 alt="" 
               />
               <div 
@@ -245,7 +245,7 @@
             <div class="relative overflow-hidden">
               <img 
                 class="rounded-t-lg w-full transform transition-transform duration-1800 group-hover:scale-110" 
-                src="\img\Viners\viners_thumb.png" 
+                src="img/Viners/Viners_thumb.png" 
                 alt="" 
               />
               <div 
@@ -271,7 +271,7 @@
             <div class="relative overflow-hidden">
               <img 
                 class="rounded-t-lg w-full transform transition-transform duration-1800 group-hover:scale-110" 
-                src="\img\Freelance\freelance_thumb.png" 
+                src="img/Freelance/freelance_thumb.png" 
                 alt="" 
               />
               <div 
