--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a id="projects-link" class="rounded-full py-1 px-4 block border-2 border-transparent  font-semibold transition-colors duration-300 ease-in-out  " href="#nextSection">Projects</a>
           </li>
           <li>
-            <a class="py-1 px-4 block font-semibold rounded-full border-2 border-transparent hover:border-white/90 hover:text-white transition-colors duration-300 ease-in-out" href="/src/resume.html">Resume</a>
+            <a class="py-1 px-4 block font-semibold rounded-full border-2 border-transparent hover:border-white/90 hover:text-white transition-colors duration-300 ease-in-out" href="src/resume.html">Resume</a>
           </li>
         </ul>
       </nav>
