--- a/src/resume.html
+++ b/src/resume.html
@@ -10,7 +10,7 @@
   <!-- FIXED BACKGROUND -->
   <div 
     class="fixed inset-0 bg-cover bg-center bg-fixed z-0 pointer-events-none"
-    style="background-image: url('/img/BG.png');">
+    style="background-image: url('img/BG.png');">
   </div>
 
   <!-- HEADER -->
