--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a id="projects-link" class="rounded-full py-1 px-4 block border-2 border-transparent  font-semibold transition-colors duration-300 ease-in-out  " href="#nextSection">Projects</a>
           </li>
           <li>
-            <a class="py-1 px-4 block font-semibold rounded-full border-2 border-transparent hover:border-white/90 hover:text-white transition-colors duration-300 ease-in-out" href="wojciechtrzpis/src/resume.html">Resume</a>
+            <a class="py-1 px-4 block font-semibold rounded-full border-2 border-transparent hover:border-white/90 hover:text-white transition-colors duration-300 ease-in-out" href="/src/resume.html">Resume</a>
           </li>
         </ul>
       </nav>
@@ -37,7 +37,7 @@
   <div id="hero" class="relative w-full h-screen overflow-hidden group">
     <!-- Background Image -->
     <div class="absolute inset-0 bg-cover bg-center transition-transform duration-3000 group-checked:scale-110" 
-      style="background-image: url('img/BG.png');">
+      style="background-image: url('/wojciechtrzpis/index.html');">
     </div>
     <!-- Color Overlay -->
     <div class="absolute inset-0 backdrop-blur-sm bg-black/90 group-hover:backdrop-blur-none transition-all duration-2000 ease-in-out">
