--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div id="hero" class="relative w-full h-screen overflow-hidden group">
     <!-- Background Image -->
     <div class="absolute inset-0 bg-cover bg-center transition-transform duration-3000 group-checked:scale-110" 
-      style="background-image: url('/img/BG.png');">
+      style="background-image: url('img/BG.png');">
     </div>
     <!-- Color Overlay -->
     <div class="absolute inset-0 backdrop-blur-sm bg-black/90 group-hover:backdrop-blur-none transition-all duration-2000 ease-in-out">
