--- a/src/resume.html
+++ b/src/resume.html
@@ -10,13 +10,13 @@
   <!-- FIXED BACKGROUND -->
   <div 
     class="fixed inset-0 bg-cover bg-center bg-fixed z-0 pointer-events-none"
-    style="background-image: url('img\BG.png');">
+    style="background-image: url('../img/BG.png');">
   </div>
 
   <!-- HEADER -->
   <header id="header" class="px-6 flex z-50 py-2 bg-transparent fixed w-full transition-colors duration-700 backdrop-blur-md">
     <div class="flex-1 flex justify-between items-center">
-      <a href="index.html">
+      <a href="../index.html">
         <img class="w-[2rem] z-10" src="/img/Logo_w.png" alt="Logo"/>
       </a>
     </div>
@@ -24,10 +24,10 @@
       <nav>
         <ul class="flex gap-3 items-center justify-between text-lg font-sans text-gray-900 pt-0">
           <li>
-            <a class="py-1 px-4 block font-semibold rounded-full border-2 border-transparent hover:border-black/90 hover:text-black transition-colors duration-300 ease-in-out cursor-pointer" href="index.html">Home</a>
+            <a class="py-1 px-4 block font-semibold rounded-full border-2 border-transparent hover:border-black/90 hover:text-black transition-colors duration-300 ease-in-out cursor-pointer" href="../index.html">Home</a>
           </li>
           <li>
-            <a class="py-1 px-4 block font-semibold rounded-full border-2 border-transparent hover:border-black/90 hover:text-black transition-colors duration-300 ease-in-out cursor-pointer" href="index.html#nextSection">Projects</a>
+            <a class="py-1 px-4 block font-semibold rounded-full border-2 border-transparent hover:border-black/90 hover:text-black transition-colors duration-300 ease-in-out cursor-pointer" href="../index.html#nextSection">Projects</a>
           </li>
           <li>
             <a class="bg-black rounded-full py-1 px-4 block border-2 border-transparent text-white hover:text-white hover:border-indigo-700 hover:border-2 font-semibold transition-colors duration-300 ease-in-out cursor-pointer" href="resume.html">Resume</a>
