--- a/src/resume.html
+++ b/src/resume.html
@@ -10,14 +10,14 @@
   <!-- FIXED BACKGROUND -->
   <div 
     class="fixed inset-0 bg-cover bg-center bg-fixed z-0 pointer-events-none"
-    style="background-image: url('../img/BG.png');">
+    style="background-image: url('img/BG.png');">
   </div>
 
   <!-- HEADER -->
   <header id="header" class="px-6 flex z-50 py-2 bg-transparent fixed w-full transition-colors duration-700 backdrop-blur-md">
     <div class="flex-1 flex justify-between items-center">
       <a href="../index.html">
-        <img class="w-[2rem] z-10" src="../img/Logo_w.png" alt="Logo"/>
+        <img class="w-[2rem] z-10" src="img/Logo_w.png" alt="Logo"/>
       </a>
     </div>
     <div class="flex items-center z-20" id="menu">
