--- a/src/resume.html
+++ b/src/resume.html
@@ -17,7 +17,7 @@
   <header id="header" class="px-6 flex z-50 py-2 bg-transparent fixed w-full transition-colors duration-700 backdrop-blur-md">
     <div class="flex-1 flex justify-between items-center">
       <a href="../index.html">
-        <img class="w-[2rem] z-10" src="img/Logo_w.png" alt="Logo"/>
+        <img class="w-[2rem] z-10" src="/img/Logo_W.png" alt="Logo"/>
       </a>
     </div>
     <div class="flex items-center z-20" id="menu">
