--- a/src/resume.html
+++ b/src/resume.html
@@ -44,7 +44,7 @@
       <div class="max-w-3xl mx-auto mb-20 p-10 relative left-auto border-1 border-white/80 right-auto rounded-3xl top-22 bg-white/50 backdrop-blur-sm shadow-lg">
 
         <div class="flex items-center mb-6 gap-8">
-          <img class="mx-auto block h-24 rounded-full sm:mx-0 sm:shrink-0" src="/img/Logo.png" alt="Profile picture" />
+          <img class="mx-auto block h-24 rounded-full sm:mx-0 sm:shrink-0" src="../img/Logo.png" alt="Profile picture" />
           <div>
             <h1 class="text-3xl select-all font-extralight font-sans text-gray-900">Wojciech Trzpis</h1>
             <p class="text-lg text-gray-600">Senior UI/UX Designer</p>
