--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         
         <!--Card 1-->
         <div class=" bg-black border  overflow-hidden">
-          <a href="silvair.html" class="group block">
+          <a href="src/silvair.html" class="group block">
             <div class="relative overflow-hidden">
               <img 
                 class="rounded-t-lg w-full transform transition-transform duration-1800 group-hover:scale-110" 
@@ -71,7 +71,7 @@
             </div>
           </a>
           <div class="p-6">
-            <a href="silvair.html">
+            <a href="src/silvair.html">
               <h5 class="mb-2 text-lg font-medium text-white dark:text-white">
                 Silvair Platform
               </h5>
@@ -84,7 +84,7 @@
 
         <!--Card 2-->
         <div class=" bg-black border  overflow-hidden">
-          <a href="Ilumio.html" class="group block">
+          <a href="src/Ilumio.html" class="group block">
             <div class="relative overflow-hidden">
               <img 
                 class="rounded-t-lg w-full transform transition-transform duration-1800 group-hover:scale-110" 
@@ -97,7 +97,7 @@
             </div>
           </a>
           <div class="p-6">
-            <a href="Ilumio.html">
+            <a href="src/Ilumio.html">
               <h5 class="mb-2 text-lg font-medium text-white dark:text-white">
                 iLumio Smart TV
               </h5>
@@ -110,7 +110,7 @@
 
         <!--Card 3-->
         <div class=" bg-black border  overflow-hidden">
-          <a href="motorola.html" class="group block">
+          <a href="src/motorola.html" class="group block">
             <div class="relative overflow-hidden">
               <img 
                 class="rounded-t-lg w-full transform transition-transform duration-1800 group-hover:scale-110" 
@@ -123,7 +123,7 @@
             </div>
           </a>
           <div class="p-6">
-            <a href="motorola.html">
+            <a href="src/motorola.html">
               <h5 class="mb-2 text-lg font-medium text-white dark:text-white">
                 Motorola Solutions
               </h5>
@@ -136,7 +136,7 @@
 
         <!--Card 4-->
         <div class=" bg-black border  overflow-hidden">
-          <a href="incampagna.html" class="group block">
+          <a href="src/incampagna.html" class="group block">
             <div class="relative overflow-hidden">
               <img 
                 class="rounded-t-lg w-full transform transition-transform duration-1800 group-hover:scale-110" 
@@ -149,7 +149,7 @@
             </div>
           </a>
           <div class="p-6">
-            <a href="incampagna.html">
+            <a href="src/incampagna.html">
               <h5 class="mb-2 text-lg font-medium text-white dark:text-white">
                 InCampagna
               </h5>
@@ -162,7 +162,7 @@
           
         <!--Card 5-->
         <div class=" bg-black border  overflow-hidden">
-          <a href="klif.html" class="group block">
+          <a href="src/klif.html" class="group block">
             <div class="relative overflow-hidden">
               <img 
                 class="rounded-t-lg w-full transform transition-transform duration-1800 group-hover:scale-110" 
@@ -175,7 +175,7 @@
             </div>
           </a>
           <div class="p-6">
-            <a href="klif.html">
+            <a href="src/klif.html">
               <h5 class="mb-2 text-lg font-medium text-white dark:text-white">
                 Klif Fashion House
               </h5>
@@ -189,7 +189,7 @@
 
         <!--Card 7-->
         <div class=" bg-black border  overflow-hidden">
-          <a href="esky.html" class="group block">
+          <a href="src/esky.html" class="group block">
             <div class="relative overflow-hidden">
               <img 
                 class="rounded-t-lg w-full transform transition-transform duration-1800 group-hover:scale-110" 
@@ -202,7 +202,7 @@
             </div>
           </a>
           <div class="p-6">
-            <a href="esky.html">
+            <a href="src/esky.html">
               <h5 class="mb-2 text-lg font-medium text-white dark:text-white">
                 eSky
               </h5>
@@ -215,7 +215,7 @@
 
         <!--Card 8-->
         <div class=" bg-black border  overflow-hidden">
-          <a href="Mck.html" class="group block">
+          <a href="src/Mck.html" class="group block">
             <div class="relative overflow-hidden">
               <img 
                 class="rounded-t-lg w-full transform transition-transform duration-1800 group-hover:scale-110" 
@@ -228,7 +228,7 @@
             </div>
           </a>
           <div class="p-6">
-            <a href="Mck.html">
+            <a href="src/Mck.html">
               <h5 class="mb-2 text-lg font-medium text-white dark:text-white">
                 McKinsey
               </h5>
@@ -241,7 +241,7 @@
 
         <!--Card 9-->
         <div class=" bg-black border  overflow-hidden">
-          <a href="viners.html" class="group block">
+          <a href="src/viners.html" class="group block">
             <div class="relative overflow-hidden">
               <img 
                 class="rounded-t-lg w-full transform transition-transform duration-1800 group-hover:scale-110" 
@@ -254,7 +254,7 @@
             </div>
           </a>
           <div class="p-6">
-            <a href="viners.html">
+            <a href="src/viners.html">
               <h5 class="mb-2 text-lg font-medium text-white dark:text-white">
                 Viners
               </h5>
@@ -267,7 +267,7 @@
 
           <!--Card 6-->
         <div class=" bg-black border  overflow-hidden">
-          <a href="freelance.html" class="group block">
+          <a href="src/freelance.html" class="group block">
             <div class="relative overflow-hidden">
               <img 
                 class="rounded-t-lg w-full transform transition-transform duration-1800 group-hover:scale-110" 
@@ -280,7 +280,7 @@
             </div>
           </a>
           <div class="p-6">
-            <a href="freelance.html">
+            <a href="src/freelance.html">
               <h5 class="mb-2 text-lg font-medium text-white dark:text-white">
                 Freelance Projects
               </h5>
