--- a/src/Mck.html
+++ b/src/Mck.html
@@ -11,11 +11,11 @@
   
   <!-- HEADER -->
   <header id="header" class="px-2 flex z-11 py-2 bg-transparent fixed w-full transition-colors duration-700">
-    <a href="index.html#nextSection">
+    <a href="../index.html#nextSection">
     <div class="bg-black p-1 rounded-lg opacity-70 hover:opacity-100">
     <div class="flex-1 flex justify-start gap-2 items-center pr-2 transition-discrete duration-1000 ease-in-out">
     
-        <img class="w-[2rem] z-10" src="/img/Logo_rotate.png" alt="Logo"/>
+        <img class="w-[2rem] z-10" src="../img/Logo_rotate.png" alt="Logo"/>
       
       <p class="text-md font-light text-white">Back</p>
     </div>
@@ -28,7 +28,7 @@
 
       <!-- Background Image -->
     <div class="fixed inset-0 bg-cover bg-center" 
-      style="background-image: url('/img/Mckinsey/McKinsey_bg.png');">
+      style="background-image: url('../img/Mckinsey/McKinsey_bg.png');">
     </div>
     <!-- Color Overlay -->
     <div class="absolute inset-0 bg-gradient-to-t from-black to-transparent ">
