--- a/src/esky.html
+++ b/src/esky.html
@@ -107,7 +107,7 @@
       <h3 class="text-2xl font-semibold">Klif Fashion House</h3>
     </a>
     
-    <a href="mck.html" class="flex justify-center items-center p-20 rounded-2xl bg-gray-100 hover:bg-gray-200 transition-colors duration-400">
+    <a href="Mck.html" class="flex justify-center items-center p-20 rounded-2xl bg-gray-100 hover:bg-gray-200 transition-colors duration-400">
       <h3 class="text-2xl font-semibold">McKinsey</h3>
     </a>
 
