--- a/src/Mck.html
+++ b/src/Mck.html
@@ -48,41 +48,53 @@
 
 <div class="relative isolate overflow-hidden bg-white px-6 py-24 sm:py-32 lg:overflow-visible lg:px-0">
   
-  
-  <!--Section 1-->
-  <div class="mx-auto lg:mx-22 lg:grid grid-cols-1 justify-items-center gap-x-8 mb-60">
-  
-    <div class="lg:max-w-280 px-8 sm:px-4 flex flex-wrap h-fill items-center mt-28">
-      <h1 class=" text-4xl mt-2 font-bold tracking-tight text-pretty text-gray-900">My role</h1>
-      <p class="mt-4 text-2xl text-gray-700">I worked as a Lead UX/UI Designer on a complex enterprise platform focused on 
-  should-costing, cost optimization, and AI-driven decision support.
-  My responsibilities spanned the full design lifecycle, including:
+<div class="max-w-3xl w-full px-4 md:px-8 mx-auto py-8">
+  <p class="text-2xl text-gray-700 mt-4">
+    I worked as a Lead UX/UI Designer on a complex enterprise platform focused on
+    should-costing, cost optimization, and AI-driven decision support.
+    My responsibilities spanned the full design lifecycle, including:
+  </p>
 
-  <ul class="list-disc pl-6"class="list-disc pl-6">
-  <li class="mt-4 text-xl text-gray-700">Leading end-to-end design efforts, from user research and persona development to high-fidelity UI design and developer handoff.</li>
-  <li class="mt-4 text-xl text-gray-700">Designing the integration of AI assistants into existing workflows to enhance efficiency and user experience.</li>
-  <li class="mt-4 text-xl text-gray-700">Driving the digital transformation of a legacy product with significant design debt, reimagining the interface for clarity, modern aesthetics, and usability.</li>
-  <li class="mt-4 text-xl text-gray-700">Building and maintaining a scalable design system based on Material UI (MUI) to ensure consistency and accelerate development.</li>
-  <li class="mt-4 text-xl text-gray-700">Analyzing user data post-launch to identify pain points and prioritize UX improvements.</li>
-  <li class="mt-4 text-xl text-gray-700">Mapping detailed user flows and crafting personas to align business goals with user needs.</li>
-  <li class="mt-4 text-xl text-gray-700">Facilitating workshops and collaborative sessions to gather insights and co-create solutions with stakeholders.</li>
-  <li class="mt-4 text-xl text-gray-700">Developing interactive prototypes to validate concepts and secure stakeholder buy-in.</li>
-  <li class="mt-4 text-xl text-gray-700">Collaborating with multidisciplinary, global teams to refine designs, manage handoff processes, and support iterative development.</li>
-  <li class="mt-4 text-xl text-gray-700">Designing complex, data-rich React-based interfaces, incorporating smooth animations for intuitive user interactions.</li>
-  <li class="mt-4 text-xl text-gray-700">Producing detailed documentation to support scalability and knowledge sharing across teams.</li>
-  <li class="mt-4 text-xl text-gray-700">Providing mentorship and guidance to junior designers, helping grow the design team’s skills and cohesion.</li>
-</ul>
+  <ul class="list-disc pl-6 mt-6 space-y-4">
+    <li class="text-xl text-gray-700">
+      Leading end-to-end design efforts, from user research and persona development to high-fidelity UI design and developer handoff.
+    </li>
+    <li class="text-xl text-gray-700">
+      Designing the integration of AI assistants into existing workflows to enhance efficiency and user experience.
+    </li>
+    <li class="text-xl text-gray-700">
+      Driving the digital transformation of a legacy product with significant design debt, reimagining the interface for clarity, modern aesthetics, and usability.
+    </li>
+    <li class="text-xl text-gray-700">
+      Building and maintaining a scalable design system based on Material UI (MUI) to ensure consistency and accelerate development.
+    </li>
+    <li class="text-xl text-gray-700">
+      Analyzing user data post-launch to identify pain points and prioritize UX improvements.
+    </li>
+    <li class="text-xl text-gray-700">
+      Mapping detailed user flows and crafting personas to align business goals with user needs.
+    </li>
+    <li class="text-xl text-gray-700">
+      Facilitating workshops and collaborative sessions to gather insights and co-create solutions with stakeholders.
+    </li>
+    <li class="text-xl text-gray-700">
+      Developing interactive prototypes to validate concepts and secure stakeholder buy-in.
+    </li>
+    <li class="text-xl text-gray-700">
+      Collaborating with multidisciplinary, global teams to refine designs, manage handoff processes, and support iterative development.
+    </li>
+    <li class="text-xl text-gray-700">
+      Designing complex, data-rich React-based interfaces, incorporating smooth animations for intuitive user interactions.
+    </li>
+    <li class="text-xl text-gray-700">
+      Producing detailed documentation to support scalability and knowledge sharing across teams.
+    </li>
+    <li class="text-xl text-gray-700">
+      Providing mentorship and guidance to junior designers, helping grow the design team’s skills and cohesion.
+    </li>
+  </ul>
+</div>
 
-</p>
-
-
-    </div>
-      
-    <div class="p-12 lg:top-4 lg:col-start-2 w-full hidden lg:block md:hidden lg:row-span-2 lg:row-start-1 lg:overflow-hidden">
-      <img class=" min-w-4xl relative rounded-xl w-full  bg-transparent" src="/img/i/silvair.png" alt="" />
-    </div>
-      
-  </div>
 
 
 
