--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     <figure class="mt-10">
       <blockquote class="text-center text-xl/8 font-semibold text-gray-900 sm:text-2xl/9">
         <p class="mb-4">Let’s turn ideas into action. Reach out and connect with me on LinkedIn!</p>
-        <a href="https://www.linkedin.com/in/wojciech-trzpis-02836314/" target="_blank" class=" bg-black rounded-full py-2 px-5 text-[18px] font-normal border-2 border-transparent text-white hover:text-white hover:border-indigo-700 hover:border-2 transition-colors duration-300 ease-in-out cursor-pointe">LinkedIn <span aria-hidden="true">&rarr;</span></a>
+        <a href="https://www.linkedin.com/in/wojciech-trzpis/" target="_blank" class=" bg-black rounded-full py-2 px-5 text-[18px] font-normal border-2 border-transparent text-white hover:text-white hover:border-indigo-700 hover:border-2 transition-colors duration-300 ease-in-out cursor-pointe">LinkedIn <span aria-hidden="true">&rarr;</span></a>
       </blockquote>
     </figure>
   </div>
