--- a/src/resume.html
+++ b/src/resume.html
@@ -51,7 +51,7 @@
 
             <p class="mt-2 font-bold">Email: <a class="select-all font-normal text-blue-700 hover:underline" href="mailto:wojciechtrzpis1@gmail.com">wojciechtrzpis1@gmail.com</a></p>
             <p class="font-bold">Phone: <a class="select-all font-normal text-blue-700 hover:underline" href="tel:+48 603-868-747">(+48) 603-868-747</a></p>
-            <p class="font-bold">LinkedIn: <a class="select-all font-normal text-blue-700 hover:underline" href="https://www.linkedin.com/in/wojciech-trzpis/" target="_blank"> wojciech-trzpis-02836314</a></p>
+            <p class="font-bold">LinkedIn: <a class="select-all font-normal text-blue-700 hover:underline" href="https://www.linkedin.com/in/wojciech-trzpis/" target="_blank"> wojciech-trzpis</a></p>
           </div>
         </div>
 
