--- a/src/resume.html
+++ b/src/resume.html
@@ -288,14 +288,13 @@
           <h2 class="section-title text-xl">Skills</h2>
           <div>
             <ul>
-              <li><strong>UX/UI:</strong> Design Systems · User Journey Mapping · User-Centered Design · User Testing · Prototyping · Animation · Data Analysis · English (Professional)</li>
-              <li><strong>Front-End:</strong> HTML · CSS · JavaScript · React · Angular · Tailwind · Bootstrap · Material Design</li>
-              <li><strong>Design Tools:</strong> Figma · Sketch · Photoshop · Illustrator · Axure · InVision · Principle · Adobe XD · Affinity Designer · Affinity Photo · InDesign</li>
+              <li><strong>UX/UI:</strong> User Journey Mapping · User-Centered Design · User Testing · Prototyping · Animation · Data Analysis · Design Systems</li>
+              <li><strong>Front-End:</strong> HTML · CSS · JavaScript · Tailwind · Bootstrap · Material Design</li>
+              <li><strong>Design Tools:</strong> Figma · Sketch · Photoshop · Illustrator · Axure · InVision · Principle · Adobe XD · Affinity Products · InDesign</li>
               <li><strong>Motion/3D:</strong> After Effects · Lottie · Blender · Cinema 4D · Animate</li>
-              <li><strong>Prototyping/No-Code:</strong> Framer · Webflow · UXPin · Play · Zeplin</li>
-              <li><strong>Design Systems & Docs:</strong> Storybook · Zeroheight · Supernova · Specify</li>
+              <li><strong>Prototyping/No-Code:</strong> Framer · Webflow · UXPin · Zeplin</li>
               <li><strong>Analytics & Testing:</strong> Heap · Hotjar · Mixpanel · FullStory · Lookback · Maze</li>
-              <li><strong>Collaboration:</strong> Notion · Miro · Jira · Trello</li>
+              <li><strong>English (Professional)</strong> 
             </ul>
           </div>
         </section>
