--- a/src/resume.html
+++ b/src/resume.html
@@ -288,7 +288,7 @@
           <h2 class="section-title text-xl">Skills</h2>
           <div>
             <ul>
-              <li><strong>UX/UI:</strong> User Journey Mapping · User-Centered Design · User Testing · Prototyping · Animation · Data Analysis · Design Systems</li>
+              <li><strong>UX/UI:</strong> User Journey Mapping · User-Centered Design · User Testing · Prototyping · Motion Design · Data Analysis · Design Systems</li>
               <li><strong>Front-End:</strong> HTML · CSS · JavaScript · Tailwind · Bootstrap · Material Design</li>
               <li><strong>Design Tools:</strong> Figma · Sketch · Photoshop · Illustrator · Axure · InVision · Principle · Adobe XD · Affinity Products · InDesign</li>
               <li><strong>Motion/3D:</strong> After Effects · Lottie · Blender · Cinema 4D · Animate</li>
