--- a/src/resume.html
+++ b/src/resume.html
@@ -288,13 +288,13 @@
           <h2 class="section-title text-xl">Skills</h2>
           <div>
             <ul>
-              <li><strong>UX/UI:</strong> User Journey Mapping · User-Centered Design · User Testing · Prototyping · Motion Design · Data Analysis · Design Systems</li>
+              <li><strong>UX/UI:</strong> User Journey Mapping · User-Centered Design · User Testing · Prototyping · Problem Solving · Heuristic Evaluation · Motion Design · Data Analysis · Design Systems · Accessibility</li>
               <li><strong>Front-End:</strong> HTML · CSS · JavaScript · Tailwind · Bootstrap · Material Design</li>
-              <li><strong>Design Tools:</strong> Figma · Sketch · Photoshop · Illustrator · Axure · InVision · Principle · Adobe XD · Affinity Products · InDesign</li>
+              <li><strong>Design tools:</strong> Figma · Sketch · Photoshop · Illustrator · Axure · InVision · Principle · Adobe XD · Affinity Products · InDesign</li>
               <li><strong>Motion/3D:</strong> After Effects · Lottie · Blender · Cinema 4D · Animate</li>
               <li><strong>Prototyping/No-Code:</strong> Framer · Webflow · UXPin · Zeplin</li>
               <li><strong>Analytics & Testing:</strong> Heap · Hotjar · Mixpanel · FullStory · Lookback · Maze</li>
-              <li><strong>English (Professional)</strong> 
+              <li><strong>Language:</strong> English (Professional) · Polish (Native)
             </ul>
           </div>
         </section>
