--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="relative z-10 px-10 sm:px-10 lg:px-20 flex items-end h-full pb-20">
       <h1 class="text-4xl sm:text-4xl lg:text-6xl max-w-4xl antialiased font-extralight font-sans text-white">
         Hello I’m Wojciech Trzpis, <a class="text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 to-pink-500">UX/UI Designer</a> with
-        over +10 years of experience
+        +10 years of experience
       </h1>
     </div>
   </div>
